2008-09-11  Christopher Faylor  <me+cygwin@cgf.cx>

	* cygwin.din (sys_sigabbrev): Add this here.
	* dcrt0.cc (__argc,__argv,_check_for_executable): Remove dllexport
	decoration since it is already handled in cygwin.din.
	* errno.cc (_sys_errlist): Ditto.
	* strsig.cc (sys_sigabbrev): Ditto.
	* include/cygwin/signal.h: Protect use of dllimport when
	__INSIDE_CYGWIN__.
	* libc/getopt.c: Revert previous changes.  Define __INSIDE_CYGWIN__.

2008-09-11  Christopher Faylor  <me+cygwin@cgf.cx>

	* localtime.cc (increment_overflow): Mark as non-inline to prevent
	compiler from complaining about the very thing we're trying to test.
	* ntea.cc (read_ea): Reorganize to avoid a new compiler warning/error.
	* sched.cc (sched_rr_get_interval): Ditto.
	* select.cc (peek_serial): Ditto.
	* libc/rexec.cc (ruserpass): Ditto.
	* posix_ipc.cc (ipc_names): Make static to avoid a compiler warning
	(and it's the right thing to do anyway).

2008-09-11  Christopher Faylor  <me+cygwin@cgf.cx>

	* net.cc (in6addr_any, in6addr_loopback): Add appropriate number of
	braces around initializer.
	(dup_ent): Try harder to coerce the first argument to deal with more
	stringent compiler.
	(get_2k_ifs): Remove extraneous typedef.
	(get_2k_ifs): Reorganize expression to avoid a compiler warning.
	(get_xp_ifs): Ditto.
	(get_nt_ifs): Ditto.

2008-09-11  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler.h (fhandler_pipe::raw_read): Remove __stdcall decoration.
	* pipe.cc (fhandler_pipe::raw_read): Ditto.

2008-09-11  Christopher Faylor  <me+cygwin@cgf.cx>

	* cygheap.cc (creturn): Reorganize to avoid a new compiler
	warning/error.
	* dtable.cc (handle_to_fn): Ditto.
	* fhandler_console.cc (fhandler_console::read): Ditto.
	(fhandler_console::scroll_screen): Ditto.
	(dev_console::set_color): Ditto.
	* fhandler_dsp.cc (fhandler_dev_dsp::write): Ditto.
	(fhandler_dev_dsp::read): Ditto.
	* fhandler_tape.cc (mtinfo_drive::get_status): Ditto.
	* hookapi.cc (find_first_notloaded_dll): Ditto.